# ncas_amof_netcdf_template

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  create_netcdf.py  pyproject.toml  remove_empty_variables.py  requirements-dev.txt  requirements.txt  setup.py  tsv2dict.py  util.py  values.py
.github/workflows/: manual_control.yml  run_tests.yml  update_version.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  create_netcdf.rst  file_info.rst  help.rst  history.rst  index.rst  installation.rst  metadata-formats.rst  remove_empty_variables.rst  tsv2dict.rst  usage.rst  util.rst  values.rst
docs/source/_static/: theme_overrides.css
docs/source/manual/: make_docs.sh  manual.rst  rst2pdf.conf
docs/source/manual/assets/: cover.tmpl  manual.yaml
docs/source/~generated/: ncas_amof_netcdf_template.create_netcdf.rst  ncas_amof_netcdf_template.file_info.rst  ncas_amof_netcdf_template.remove_empty_variables.rst  ncas_amof_netcdf_template.tsv2dict.rst  ncas_amof_netcdf_template.util.rst  ncas_amof_netcdf_template.values.rst
ncas_amof_netcdf_template/: __init__.py  create_netcdf.py  remove_empty_variables.py  tsv2dict.py  util.py
src/ncas_amof_netcdf_template/: __about__.py  __init__.py  create_netcdf.py  file_info.py  remove_empty_variables.py  tsv2dict.py  util.py  values.py
tests/: test_build.py  test_create_netcdf.py  test_csv.csv  test_tsv2dict.py  test_util.py  test_values.py
tests/test_metadata_files/: test_csv.csv  test_json.json  test_xml.xml  test_yaml.yaml
